# Q4_Accelerated_SolDaddy

accel-pinocchio-escrow/: Cargo.toml
accel-pinocchio-escrow/src/: lib.rs
accel-pinocchio-escrow/src/instructions/: cancel.rs  make.rs  mod.rs  take.rs
accel-pinocchio-escrow/src/state/: escrow.rs
accel-pinocchio-escrow/src/tests/: mod.rs
escrow-litesvm/.anchor/test-ledger/: faucet-keypair.json  genesis.tar.bz2  stake-account-keypair.json  validator-keypair.json  vote-account-keypair.json
escrow-litesvm/.anchor/test-ledger/rocksdb/: 000014.sst  000015.sst  000016.sst  000017.sst  000018.sst  000019.sst  IDENTITY  LOG  LOG.old.1760092582382010  MANIFEST-000021  OPTIONS-000027  OPTIONS-000029
escrow-litesvm/programs/anchor-escrow/: Cargo.toml
escrow-litesvm/programs/anchor-escrow/src/: lib.rs
escrow-litesvm/programs/anchor-escrow/src/instructions/: make.rs  take.rs
escrow-litesvm/programs/anchor-escrow/src/state/: escrow.rs
escrow-litesvm/programs/anchor-escrow/src/tests/: mod.rs
fundraiser/: Cargo.toml
fundraiser/src/: constants.rs  error.rs  lib.rs
fundraiser/src/instructions/: contribute.rs  finalize.rs  initialize.rs  mod.rs  refund.rs
fundraiser/src/state/: contributor.rs  fundraiser.rs
fundraiser/src/tests/: mod.rs
magicblock-er-example/: Anchor.toml  package.json
magicblock-er-example/programs/er-state-account/: Cargo.toml
magicblock-er-example/programs/er-state-account/src/: lib.rs
magicblock-er-example/programs/er-state-account/src/instructions/: consume_randomness.rs  init_user.rs  mod.rs  request_randomness_delegated.rs  request_randomness_undelegated.rs  undelegate.rs  update_commit.rs
magicblock-er-example/programs/er-state-account/src/state/: user_account.rs
magicblock-er-example/tests/: er-state-account.ts
week1-challenge/hook/: Anchor.toml
week1-challenge/hook/programs/hook/: Cargo.toml
week1-challenge/hook/programs/hook/src/: lib.rs
week1-challenge/hook/programs/hook/src/tests/: mod.rs
week1-challenge/vault/: Anchor.toml  Cargo.toml
week1-challenge/vault/programs/vault/: Cargo.toml
week1-challenge/vault/programs/vault/src/: lib.rs
week1-challenge/vault/programs/vault/src/instructions/: deposit.rs  initialize.rs  withdraw.rs
week1-challenge/vault/programs/vault/src/state/: vault.rs
week1-challenge/vault/programs/vault/src/tests/: hook.rs  ibm.rs  mod.rs
whitelist-transfer-hook/: package.json
whitelist-transfer-hook/programs/whitelist-transfer-hook/: Cargo.toml
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/: lib.rs
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/instructions/: init_extra_account_meta.rs  initialize_mint_with_hook.rs  initialize_whitelist.rs  mint_token.rs  mod.rs  transfer_hook.rs  whitelist_operations.rs
whitelist-transfer-hook/programs/whitelist-transfer-hook/src/state/: whitelist.rs
whitelist-transfer-hook/tests/: whitelist-transfer-hook.ts
