[package]
name = "fundraiser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
pinocchio = "0.9.2"
pinocchio-associated-token-account = "0.2.0"
pinocchio-pubkey = "0.3.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
pinocchio-token-program = "0.0.0"
signature = "1.6.4"

[dev-dependencies]
litesvm = "0.6.1"
litesvm-token = { version = "0.6.1", default-features = false, features = ["spl-token"] }

solana-instruction = "2.2.1"
solana-keypair = "2.2.1"
solana-native-token = "2.2.1"
solana-pubkey = "2.2.1"
solana-signer = "2.2.1"
solana-system-interface = "1.0.0"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-sdk-ids = "2.2.1"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint", "test-sbf"] }
spl-associated-token-account = "7.0.0"
solana-rpc-client = "3.0.3"
solana-address = "1.0.0"
solana-account = "2.2.1"
pinocchio-token = "0.4.0"
pinocchio-associated-token-account = "0.2.0"

